--- a/.github/workflows/fair-test-workflow.yml
+++ b/.github/workflows/fair-test-workflow.yml
@@ -1,9 +1,15 @@
-name: test-workflow.yml
+name: fair-test-workflow.yml
 on:
   workflow_dispatch:
 
 
 jobs:
+  wait-120:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Wait 120 seconds
+        run: sleep 120
+
   wait:
     runs-on: ubuntu-latest
     strategy:
@@ -31,7 +37,6 @@ jobs:
           - { wait: 30 }
           - { wait: 30 }
           - { wait: 60 }
-          - { wait: 120 }
     steps:
       - name: Wait
         run: sleep ${{ matrix.wait.wait }}
