--- a/.github/workflows/run-workflow-experiment.yml
+++ b/.github/workflows/run-workflow-experiment.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies
-        run: pip install -r new-versions/requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Run workflows
         run: python experiments/github/workflow_scheduling/run_workflows.py
