--- a/.github/workflows/fair-test-workflow2.yml
+++ b/.github/workflows/fair-test-workflow2.yml
@@ -1,15 +1,9 @@
-name: fair-test-workflow.yml
+name: fair-test-workflow2.yml
 on:
   workflow_dispatch:
 
 
 jobs:
-  wait-120:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Wait 120 seconds
-        run: sleep 120
-
   wait:
     runs-on: ubuntu-latest
     strategy:
@@ -41,3 +35,9 @@ jobs:
     steps:
       - name: Wait
         run: sleep ${{ matrix.wait.wait }}
+
+  wait-120:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Wait 120 seconds
+        run: sleep 120
